syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "com.nesstiff.grpc";
option java_outer_classname = "BankProto";

import "google/protobuf/timestamp.proto";

service BankService {
  rpc getById (GrpcBankIdRequest) returns (GrpcBankResponse);
}

message GrpcBankIdRequest {
  int32 id = 1 ;
}

message GrpcBankResponse {
  int32 bankId = 1;
  int32 bankCode = 2;
  int32 bankName = 3;
}
